replace Guava and Guice usage with stream API and JSR-330 in kb-payment
This is 3rd part of killbill-payment work for issue 1615.